shroudBNC (version 1.0)

Revision 292
-set SO_REUSEADDR flag for socket listeners

Revision 299:
-bug/crash: server-messages/server-kicks which affected sbnc users
-added required functions to support the new ruby module
-bug: when deleting users their username was free()'d before their
	irc connection was closed -> garbled output in the log
-bug: version.tcl was not setting the binds for the right users, expiring
	flood blocks didn't work because the variable $user didn't exist
-users' idents can be overriden using User->SetIdent("ident")
	(tcl: setbncuser USER ident new-ident)
	
Revision 300:
-bug: fixed "raw" command in iface.tcl (start-index should be 0, not 1)

Revision 304:
-modularized sbnc so it can be updated without losing any active irc connections
-bug: fixed various compilation errors on *bsd boxes

Revision 307:
-client connections are kept alive during reloads

Revision 308:
-bug: fixed a minor memory leak in sbncloader
-bug: fixed compilation errors on linux

Revision 309:
-changed directory name in the .tar.gz package
-added commands: "make install" and "make update"
-simplified build procedure
-changed name of example configuration files
-updated readme file to reflect recent changes